name:                servant-rust
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/servant-rust#readme
license:             BSD3
license-file:        LICENSE
author:              Denis Redozubov
maintainer:          denis.redozubov@gmail.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Servant.Rust
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , http-types
                     , neat-interpolation >= 0.3
                     , servant >= 0.5
                     , servant-foreign >= 0.5
                     , lens > 4
                     , text
  default-language:    Haskell2010

test-suite servant-rust-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , hspec >= 2.2
                     , neat-interpolation >= 0.3
                     , servant-rust
                     , servant-server >= 0.5
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/servant-rust
